--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>頭條編輯器</title>
 </head>
 <body>
-<h1><a href="popup.html">Demo</a></h1>
+<h1><a href="./popup.html">Demo</a></h1>
 </body>
 </html>
