--- a/popup.html
+++ b/popup.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>頭條編輯器</title>
     <script type="module" src="./src/content.js"></script>
+    <style>
+        body {
+            width: 100vw;
+            height: 100vh;
+        }
+    </style>
 </head>
 <body>
 <div class="publish-editor-title-wrapper"></div>
